--- a/StudyJava/.classpath
+++ b/StudyJava/.classpath
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="JavaSkillBook"/>
+	<classpathentry kind="src" path="JavaSkillBook_Origin"/>
 	<classpathentry kind="src" path="BrainJavaBook"/>
 	<classpathentry kind="src" path="JavaJungSuk"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="tmp"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib-commons/commons-email-1.3.3.jar"/>
+	<classpathentry kind="lib" path="lib-commons/javax.mail.jar"/>
+	<classpathentry kind="lib" path="lib-commons/log4j-1.2-api-2.1.jar"/>
+	<classpathentry kind="lib" path="lib-commons/log4j-api-2.1.jar"/>
+	<classpathentry kind="lib" path="lib-commons/log4j-core-2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
